# cursova

./: .gitignore  README.md
Arduino/include/: ActuatorFactory.h  BME680_Sensor.h  CommandProcessor.h  DataTransmitter.h  HandshakeHandler.h  IActuator.h  ICommandProcessor.h  IDataTransferHandler.h  ISensor.h  ISerialHandler.h  LED_Actuator.h  Sensor_Manager.h  Serial_Handler.h  Servo_Actuator.h
Arduino/lib/Adafruit_BME680-master/: Adafruit_BME680.h
Arduino/lib/Adafruit_BusIO-master/: Adafruit_I2CDevice.h
Arduino/src/: ActuatorFactory.cpp  Adafruit_Sensor.cpp  BME680_Sensor.cpp  CommandProcessor.cpp  DataTransmitter.cpp  HandshakeHandler.cpp  LED_Actuator.cpp  Sensor.cpp  Sensor.h  Sensor_Manager.cpp  Serial_Handler.cpp  Servo_Actuator.cpp  main.cpp
Arduino_Part/src/: main.cpp
PC_part/: .comparchive.sh
PC_part/Receiver/: ActuatorData.db  ActuatorDataManager.cpp  ActuatorDataManager.h  ActuatorEvents  ActuatorEvents.db  ActuatorService.cpp  ActuatorService.h  CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  DatabaseManager.cpp  DatabaseManager.h  ICommand.h  IRepository.h  ISerialPort.h  ProtocolHandler.cpp  ProtocolHandler.h  SensorData.db  SensorDataManager.cpp  SensorDataManager.h  SensorService.cpp  SensorService.h  SerialCommunicator.cpp  SerialCommunicator.h  identifier.sqlite  main.cpp  test  test.db
src/: Sensor.cpp  Sensor.h  main.cpp
